0.8 (UNRELEASED)
----------------
- Add new method umockdev_testbed_load_evemu_events() to replay an evemu events
  file into an emulated evdev device. These are platform independent and thus
  more portable than a script record.
- Add -e/--evemu-events=devname=eventsfilename option to umockdev-run, to load
  an evemu .events file. (Issue #5)
- Add umockdev_in_mock_environment(). This function returns whether
  or not the current process is running in a umockdev testbed
  environment. Thanks Chris Halse Rogers!
- Only send a "add" uevent from add_device if running in a umockdev
  testbed environment. Fixes error messages when loading devices from
  the umockdev-run commandline. Thanks Chris Halse Rogers!

0.7 (2014-03-05)
----------------
- Set PTYs into raw mode to get more accurate read() semantics,
  specifically how many bytes each read() slurps.
- umockdev-record --script=/dev/device now also stores the name of the
  device node recorded in the script.
  umockdev_testbed_load_script(testbed, NULL, "device.script")
  now automatically associates the script with the original device node.

0.6 (2014-02-15)
----------------
- Also send DEVNAME in uevent when available. Thanks Chris Halse Rogers!
- Send an "add" uevent when adding a device
- umockdev-record --ioctl now stores the name of the device node recorded
  in the trace. umockdev_testbed_load_ioctl(testbed, NULL, "device.ioctl")
  now automatically associates the ioctl trace with the original device
  node. (issue #33)

0.5.1 (2014-01-16)
------------------
- Update devices/cameras/canon-powershot-sx200.ioctl with ioctls from
  libgphoto2 2.5.3, to make the /umockdev-run/integration/gphoto-* tests work
  with that version.

0.5 (2014-01-08)
----------------
- Add generic support for variable length structs without pointers to
  substructs. Definitions of such ioctls must provide a get_data_size()
  function which returns the number of bytes based on the ioctl number and the
  data pointer.