@@ -297,6 +297,40 @@ t_system_ioctl_log ()
     DirUtils.remove (workdir);
 }
 
+static void
+t_system_ioctl_log_append_dev_mismatch ()
+{
+    string sout;
+    string serr;
+    int exit;
+    string log;
+
+    try {
+        FileUtils.close(FileUtils.open_tmp ("ioctl_log_test.XXXXXX", out log));
+    } catch (Error e) { Process.abort (); }
+
+    // should log the header plus one read
+    spawn (umockdev_record_path + " -i /dev/zero=" + log + " -- head -c1 /dev/zero",
+           out sout, out serr, out exit);
+    assert_cmpstr (serr, Op.EQ, "");
+    assert_cmpint (exit, Op.EQ, 0);
+    assert_cmpstr (sout, Op.EQ, "\0");
+
+    string orig_contents = file_contents (log);
+
+    // should fail as it is a different device
+    spawn (umockdev_record_path + " -i /dev/null=" + log + " -- head -c1 /dev/null",
+           out sout, out serr, out exit);
+    assert (serr.contains ("two different devices"));
+    assert_cmpint (exit, Op.EQ, 256);
+    assert_cmpstr (sout, Op.EQ, "\0");
+
+    // should not change original record
+    assert_cmpstr (file_contents (log), Op.EQ, orig_contents);
+
+    FileUtils.remove (log);
+}
+
 /*
  * umockdev-record --script recording to a file, with simple "head" command
  */
@@ -328,17 +362,96 @@ t_system_script_log_simple ()
     assert_cmpstr (sout, Op.EQ, "\0");
     string[] loglines = file_contents (log).split("\n");
     assert_cmpuint (loglines.length, Op.EQ, 2);
-    string[] logheader = loglines[0].split(" ");
-    assert_cmpuint (logheader.length, Op.EQ, 3);
-    assert_cmpstr (logheader[0], Op.EQ, "d");
-    assert_cmpstr (logheader[1], Op.EQ, "0");
-    assert_cmpstr (logheader[2], Op.EQ, "/dev/zero");
+    assert_cmpstr (loglines[0], Op.EQ, "d 0 /dev/zero");
+
     string[] logwords = loglines[1].split(" ");
     assert_cmpuint (logwords.length, Op.EQ, 3);
     assert_cmpstr (logwords[0], Op.EQ, "r");
     // should be quick, give it 5 ms at most
     assert_cmpint (int.parse(logwords[1]), Op.LE, 5);
     assert_cmpstr (logwords[2], Op.EQ, "^@");
+
+    FileUtils.remove (log);
+}
+
+static void
+t_system_script_log_append_same_dev ()
+{
+    string sout;
+    string serr;
+    int exit;
+    string log;
+
+    try {
+        FileUtils.close(FileUtils.open_tmp ("test_script_log.XXXXXX", out log));
+    } catch (Error e) { Process.abort (); }
+
+    // should log the header plus one read
+    spawn (umockdev_record_path + " --script=/dev/zero=" + log + " -- head -c1 /dev/zero",
+           out sout, out serr, out exit);
+    assert_cmpstr (serr, Op.EQ, "");
+    assert_cmpint (exit, Op.EQ, 0);
+    assert_cmpstr (sout, Op.EQ, "\0");
+
+    // should still work as it is the same device, and append
+    spawn (umockdev_record_path + " --script=/dev/zero=" + log + " -- head -c1 /dev/zero",
+           out sout, out serr, out exit);
+    assert_cmpstr (serr, Op.EQ, "");
+    assert_cmpint (exit, Op.EQ, 0);
+    assert_cmpstr (sout, Op.EQ, "\0");
+
+    // should now have the header and two reads
+    string[] loglines = file_contents (log).split("\n");
+    assert_cmpuint (loglines.length, Op.EQ, 3);
+    assert_cmpstr (loglines[0], Op.EQ, "d 0 /dev/zero");
+
+    string[] logwords = loglines[1].split(" ");
+    assert_cmpuint (logwords.length, Op.EQ, 3);
+    assert_cmpstr (logwords[0], Op.EQ, "r");
+    // should be quick, give it 5 ms at most
+    assert_cmpint (int.parse(logwords[1]), Op.LE, 5);
+    assert_cmpstr (logwords[2], Op.EQ, "^@");
+
+    logwords = loglines[2].split(" ");
+    assert_cmpuint (logwords.length, Op.EQ, 3);
+    assert_cmpstr (logwords[0], Op.EQ, "r");
+    // should be quick, give it 5 ms at most
+    assert_cmpint (int.parse(logwords[1]), Op.LE, 5);
+    assert_cmpstr (logwords[2], Op.EQ, "^@");
+
+    FileUtils.remove (log);
+}
+
+static void
+t_system_script_log_append_dev_mismatch ()
+{
+    string sout;
+    string serr;
+    int exit;
+    string log;
+
+    try {
+        FileUtils.close(FileUtils.open_tmp ("test_script_log.XXXXXX", out log));
+    } catch (Error e) { Process.abort (); }
+
+    // should log the header plus one read
+    spawn (umockdev_record_path + " --script=/dev/zero=" + log + " -- head -c1 /dev/zero",
+           out sout, out serr, out exit);
+    assert_cmpstr (serr, Op.EQ, "");
+    assert_cmpint (exit, Op.EQ, 0);
+    assert_cmpstr (sout, Op.EQ, "\0");
+
+    string orig_contents = file_contents (log);
+
+    // should fail as it is a different device
+    spawn (umockdev_record_path + " --script=/dev/null=" + log + " -- head -c1 /dev/null",
+           out sout, out serr, out exit);
+    assert (serr.contains ("two different devices"));
+    assert_cmpint (exit, Op.EQ, 256);
+    assert_cmpstr (sout, Op.EQ, "\0");
+
+    // should not change original record
+    assert_cmpstr (file_contents (log), Op.EQ, orig_contents);
 
     FileUtils.remove (log);
 }
@@ -653,7 +766,10 @@ main (string[] args)
     Test.add_func ("/umockdev-record/system-all", t_system_all);
     Test.add_func ("/umockdev-record/system-invalid", t_system_invalid);
     Test.add_func ("/umockdev-record/ioctl-log", t_system_ioctl_log);
+    Test.add_func ("/umockdev-record/ioctl-log-append-dev-mismatch", t_system_ioctl_log_append_dev_mismatch);
     Test.add_func ("/umockdev-record/script-log-simple", t_system_script_log_simple);
+    Test.add_func ("/umockdev-record/script-log-append-same-dev", t_system_script_log_append_same_dev);
+    Test.add_func ("/umockdev-record/script-log-append-dev-mismatch", t_system_script_log_append_dev_mismatch);
     Test.add_func ("/umockdev-record/script-log-chatter", t_system_script_log_chatter);
     Test.add_func ("/umockdev-record/script-log-socket", t_system_script_log_chatter_socket_stream);
 
